--- a/product-service-prod.properties
+++ b/product-service-prod.properties
@@ -17,3 +17,5 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.database.hikari.maximum-pool-size=10
 spring.database.hikari.connection-timeout=60000
+
+application.theme.colour=black
