--- a/product-service-prod.properties
+++ b/product-service-prod.properties
@@ -18,4 +18,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.database.hikari.maximum-pool-size=10
 spring.database.hikari.connection-timeout=60000
 
-application.theme.colour=white
+application.theme.colour=black
