--- a/product-service-prod.properties
+++ b/product-service-prod.properties
@@ -1,4 +1,4 @@
-spring.application.name=storeapp
+spring.application.name=product-service
 
 # Enable Actuator
 management.endpoints.web.exposure.include=*
